tests/baselines/reference/noCrashOnImportShadowing.errors.txt
index.ts(9,10): error TS2709: Cannot use namespace 'OriginalB' as a type.


==== b.ts (0 errors) ====
    export const zzz = 123;
    
==== a.ts (0 errors) ====
    import * as B from "./b";
    
    interface B {
        x: string;
    }
    
    const x: B = { x: "" };
    B.zzz;
    
    export { B };
    
==== index.ts (1 errors) ====
    import { B } from "./a";
    
    const x: B = { x: "" };
    B.zzz;
    
    import * as OriginalB from "./b";
    OriginalB.zzz;
    
    const y: OriginalB = x;
             ~~~~~~~~~
!!! error TS2709: Cannot use namespace 'OriginalB' as a type.